# active-trace

./: .gitignore  .mcp.json  CHANGES.md  DECISIONS.md  README.md  VERIFICACION_C07_MANUAL.md  docker-compose.yml
backend/: .coverage  .env.example  Dockerfile  README.md  alembic.ini  coverage.json  pyproject.toml  validate_c10_c11_env.py
backend/activia_trace_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
backend/alembic/: README  env.py
backend/alembic/versions/: 0001_create_tenant.py  0002_create_auth_tables.py  0003_create_rbac_tables.py  0004_create_audit_log.py  0005_create_estructura_academica.py  0010_comunicacion.py  (+13 more)
backend/app/: __init__.py  main.py
backend/scripts/: reset_users.py  seed_dev.py
backend/tests/: conftest.py  support_models.py  test_analisis_c11.py  test_app_startup.py  test_audit_admin_api.py  test_audit_log_model.py  test_audit_middleware.py  test_audit_service.py  test_auth_login.py  test_auth_rate_limit.py  test_auth_recovery.py  test_auth_refresh.py  test_auth_two_factor.py  test_avisos_c15.py  test_calificaciones_c10.py  test_comunicacion_c12.py  test_config.py  test_core_models.py  test_database.py  test_encuentros_guardias_c13.py  test_equipos_c08.py  test_estructura_academica.py  test_evaluaciones_coloquios_c14.py  test_health.py  test_impersonacion.py  test_liquidaciones_c18.py  test_metricas_auditoria_c19.py  test_padron_c09.py  test_perfil_c20.py  test_programas_fechas_c17.py  test_rbac_admin_api.py  test_rbac_models.py  test_rbac_resolution_cache.py  test_security.py  test_tareas_c16.py  test_usuario_asignacion_c07.py
(+481 files in other folders)
