[build-system]
requires = ["setuptools>=69.0"]
build-backend = "setuptools.build_meta"

[project]
name = "activia-trace-backend"
version = "0.1.0"
description = "Backend scaffold for activia-trace"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.16.0,<2.0.0",
    "argon2-cffi>=23.1.0,<24.0.0",
    "asyncpg>=0.30.0,<1.0.0",
    "cryptography>=45.0.0,<48.0.0",
    "fastapi>=0.115.0,<1.0.0",
    "opentelemetry-api>=1.35.0,<2.0.0",
    "opentelemetry-exporter-otlp-proto-http>=1.35.0,<2.0.0",
    "opentelemetry-instrumentation-fastapi>=0.56b0,<1.0.0",
    "opentelemetry-sdk>=1.35.0,<2.0.0",
    "pydantic>=2.11.0,<3.0.0",
    "pydantic-settings>=2.10.0,<3.0.0",
    "pyotp>=2.9.0,<3.0.0",
    "python-jose>=3.5.0,<4.0.0",
    "sqlalchemy>=2.0.41,<3.0.0",
    "uvicorn>=0.35.0,<1.0.0",
]

[project.optional-dependencies]
test = [
    "httpx>=0.28.1,<1.0.0",
    "pytest>=8.4.0,<9.0.0",
    "pytest-asyncio>=1.0.0,<2.0.0",
]

[tool.setuptools.packages.find]
include = ["app*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"
asyncio_default_test_loop_scope = "session"
testpaths = ["tests"]
